tests/requests/snapshots/admin_can_add_user_by_user1@example.com_and_new_user@user_request.snap
---
source: tests/requests/user.rs
expression: "try_login_response.json::<serde_json::Value>()"
---
{
  "data": null,
  "message": "Login Failed"
}
