tests/requests/snapshots/list_users_first_admin@user_request.snap
---
source: tests/requests/user.rs
expression: "response.json::<serde_json::Value>()"
---
{
  "pagination": {
    "page": 1,
    "page_size": 25,
    "total_pages": 1
  },
  "results": [
    {
      "displayedName": "first_admin",
      "role": 0,
      "username": "first_admin"
    },
    {
      "displayedName": "teacher1",
      "role": 2,
      "username": "teacher1"
    },
    {
      "displayedName": "user1",
      "role": 1,
      "username": "user1"
    },
    {
      "displayedName": "user2",
      "role": 1,
      "username": "user2"
    }
  ]
}
