tests/requests/snapshots/login_with_invalid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "response.json::<serde_json::Value>()"
---
{
  "data": null,
  "message": "Login Failed"
}
