tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "response.json::<serde_json::Value>()"
---
{
  "is_verified": true,
  "name": "loco",
  "pid": "PID",
  "token": "TOKEN"
}
