tests/requests/snapshots/view_single_problem@problem_request.snap
---
source: tests/requests/problems.rs
expression: "response.json::<serde_json::Value>()"
---
Object {
    "data": Object {
        "allowedLanguage": Number(7),
        "courses": Array [],
        "description": Object {
            "createdAt": String("DATE"),
            "description": String(""),
            "hint": String(""),
            "input": String(""),
            "output": String(""),
            "sampleInput": Array [],
            "sampleOutput": Array [],
            "updatedAt": String("DATE"),
        },
        "highScore": Number(0),
        "owner": String("first_admin"),
        "problemName": String("test-course"),
        "quota": Number(-1),
        "status": Number(0),
        "submitCount": Number(0),
        "tags": Array [],
        "testCase": Array [
            Object {
                "memoryLimit": Number(65535),
                "score": Number(100),
                "testCaseCount": Number(2),
                "timeLimit": Number(1000),
            },
        ],
        "type": Number(0),
    },
    "message": String(""),
}
